Missed a change where outline needed to be re-enabled. Also bump version again.

--- a/assets/stylesheets/bootstrap/_button-groups.scss
+++ b/assets/stylesheets/bootstrap/_button-groups.scss
@@ -20,7 +20,7 @@
     }
     &:focus {
       // Remove focus outline when dropdown JS adds it after closing the menu
-      outline: 0;
+      // outline: 0;
     }
   }
 }
